# fastapi-nextauth-jwt

./: pyproject.toml
.github/workflows/: test.yml
src/fastapi_nextauth_jwt/: __init__.py  cookies.py  csrf.py  exceptions.py  fastapi_nextauth_jwt.py  logger.py  operations.py
tests/fastapi/: test_v5.py
