[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fastapi_nextauth_jwt"
authors = [{name = "Tom Catshoek"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "fastapi",
    "cryptography",
    "python-jose[cryptography]"
]

[project.optional-dependencies]
test = [
    "pytest >=2.7.3",
    "pytest-cov",
    "httpx"
]
dev = [
    "ruff>=0.9.4"
]

[project.urls]
Home = "https://github.com/TCatshoek/fastapi-nextauth-jwt"

[tool.flit.sdist]
exclude = [
    "tests/",
    ".github/",
    ".examples/",
    ".gitignore"
]

[tool.ruff]
target-version = "py39"
line-length = 160

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"